# opti-libc

./: CMakeLists.txt
exps/memcpy/: CMakeLists.txt  docs.txt  implem_libc.c  implem_v0_0.s  implem_v0_1.s  implem_v0_2.s  implem_v0_3.s  implem_v1.s  implem_v2.s  implem_v3.s  implem_v4.s  implem_v5.s  implem_v6.s  main.cc  tests.cc
exps/memset/: Makefile  implem_libc.c  implem_stosb.s  implem_stosq.s  test.cc
exps/timing_tsc/: CMakeLists.txt  main.cc  timer.s
tests/: CMakeLists.txt
utils/: rand.hh  timer.hh
